--- a/.travis.yml
+++ b/.travis.yml
@@ -1,2 +1,8 @@
 language: csharp
 solution: GameOfLife.sln
+install:
+  - nuget restore GameOfLife.sln
+  - nuget install NUnit.Runners -Version 3.8.0 -OutputDirectory testrunner
+script:
+  - msbuild /p:Configuration=Release GameOfLife.sln
+  - mono ./testrunner/NUnit.ConsoleRunner.3.8.0/tools/nunit3-console.exe ./GameOfLife.Tests/bin/Release/GameOfLife.Tests.dll
